force-app/main/default/objects/BankMaster__c/BankMaster__c.object-meta.xml
<CustomObject>
    <label>BankMaster</label>
    <nameField>
        <label>AccountNo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BankMasters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>