force-app/main/default/objects/BankMaster__c/fields/AvailBalance__c.field-meta.xml
<CustomField>
    <fullName>AvailBalance__c</fullName>
    <formula>Deposit__c  -  Withdrawal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvailBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>