force-app/main/default/objects/BankMaster__c/fields/bank_detail__c.field-meta.xml
<CustomField>
    <fullName>bank_detail__c</fullName>
    <label>bank detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>