force-app/main/default/objects/BankMaster__c/fields/Bank_Transcation__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transcation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bank Transcation</label>
    <referenceTo>Bank_Transcation__c</referenceTo>
    <relationshipLabel>BankMasters</relationshipLabel>
    <relationshipName>BankMasters</relationshipName>
    <type>Lookup</type>
</CustomField>