force-app/main/default/objects/BankMaster__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <summarizedField>Bank_Transcation__c.TransAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Bank_Transcation__c.TransType__c</field>
        <operation>equals</operation>
        <value>Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Transcation__c.AccountNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>