force-app/main/default/objects/BankMaster__c/fields/master_date_time__c.field-meta.xml
<CustomField>
    <fullName>master_date_time__c</fullName>
    <label>master date time</label>
    <type>DateTime</type>
</CustomField>