force-app/main/default/objects/BankMaster__c/fields/nameccc__c.field-meta.xml
<CustomField>
    <fullName>nameccc__c</fullName>
    <label>nameNEW</label>
    <length>18</length>
    <type>Text</type>
</CustomField>