force-app/main/default/objects/BankMaster__c/fields/sal__c.field-meta.xml
<CustomField>
    <fullName>sal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>sal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>