force-app/main/default/objects/BankMaster__c/fields/total_points__c.field-meta.xml
<CustomField>
    <fullName>total_points__c</fullName>
    <label>total points</label>
    <summarizedField>Bank_Transcation__c.pointer__c</summarizedField>
    <summaryForeignKey>Bank_Transcation__c.AccountNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>