force-app/main/default/objects/BankMaster__c/validationRules/start_balance_not_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>start_balance_not_zero</fullName>
    <active>false</active>
    <errorConditionFormula>Balance__c   &lt; 100</errorConditionFormula>
    <errorDisplayField>Balance__c</errorDisplayField>
    <errorMessage>starting balance should be atleast 100</errorMessage>
</ValidationRule>